// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBarIcon should be rendered with default color if not focused 1`] = `
<MaterialIcons
  color="#ccc"
  name="home"
  size={26}
/>
`;

exports[`TabBarIcon should be rendered with main theme color if focused 1`] = `
<MaterialIcons
  color="#40CED6"
  name="home"
  size={26}
/>
`;
